# crawl-index-server

./: .env.example  .gitignore  README.md  README.tr.md  pyproject.toml
app/: __init__.py  config.py  main.py  mcp_server.py
app/api/: routes.py  schemas.py
app/db/: models.py  session.py
app/services/: chunking.py  cloudflare.py  daemon.py  embeddings.py  jobs.py  lock_manager.py  search.py  sources.py  vector_store.py
app/ui/: routes.py
app/ui/static/: app.css
app/ui/templates/: base.html  document_detail.html  jobs.html  search.html  settings.html  source_detail.html  sources.html
app/ui/templates/partials/: search_results.html
app/utils/: errors.py  retry.py
app/workers/: scheduler.py
scripts/: bootstrap.py  smoke.py
tests/: test_chunking.py  test_cloudflare_mapping.py  test_embedding_skip.py  test_integration.py  test_mcp_server.py
