[project]
name = "crawl-index-server"
version = "0.1.0"
description = "Local-first crawl index server with Cloudflare Browser Rendering, embeddings, and semantic search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4,<4",
    "fastapi>=0.115.0,<1",
    "httpx>=0.28.1,<1",
    "jinja2>=3.1.4,<4",
    "mcp[cli]>=1.18.0,<2",
    "portalocker>=2.8.0,<3",
    "pydantic-settings>=2.6.1,<3",
    "python-dotenv>=1.0.1,<2",
    "python-multipart>=0.0.20,<1",
    "qdrant-client>=1.7.0,<1.8",
    "sentence-transformers>=3.3.1,<4",
    "sqlmodel>=0.0.22,<0.1",
    "uvicorn[standard]>=0.32.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9",
    "respx>=0.22.0,<1",
]

[project.scripts]
crawl-index-server = "app.main:run"
crawl-index-mcp = "app.mcp_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
